force-app/main/default/objects/Pomodoro__c/Pomodoro__c.object-meta.xml
<CustomObject>
    <label>Pomodoro</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Pomodoro Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pomodoros</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>