force-app/main/default/objects/Pomodoro__c/fields/DateFinished__c.field-meta.xml
<CustomField>
    <fullName>DateFinished__c</fullName>
    <label>Date  Finished</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>