force-app/main/default/objects/Pomodoro__c/fields/DateStarted__c.field-meta.xml
<CustomField>
    <fullName>DateStarted__c</fullName>
    <label>Date Started</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>