force-app/main/default/objects/Pomodoro__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>EndDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>