force-app/main/default/objects/Pomodoro__c/fields/FocusLevel__c.field-meta.xml
<CustomField>
    <fullName>FocusLevel__c</fullName>
    <label>FocusLevel</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>