force-app/main/default/objects/Pomodoro__c/fields/PomodoroTask__c.field-meta.xml
<CustomField>
    <fullName>PomodoroTask__c</fullName>
    <label>Pomodoro Task</label>
    <referenceTo>PomodorTask__c</referenceTo>
    <relationshipLabel>Pomodoros</relationshipLabel>
    <relationshipName>Pomodoros</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>