force-app/main/default/objects/Pomodoro__c/fields/TimeRecorded__c.field-meta.xml
<CustomField>
    <fullName>TimeRecorded__c</fullName>
    <label>TimeRecorded</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>